update projects layout and add resume

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -15,4 +15,6 @@
 </script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=TeX-MML-AM_CHTML' async></script>
 
+<script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
+
 <!-- end custom head snippets -->
