Add ER-PI's Artifact badges news and remove hovering underline for navigation urls

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -430,3 +430,10 @@
     }
   }
 }
+
+// Remove the thin Underline after hovering
+.masthead .greedy-nav a,
+.masthead .greedy-nav a:hover,
+.masthead .greedy-nav a:focus {
+  text-decoration: none !important;
+}
