--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -266,6 +266,7 @@
       margin: 0;
       padding: 10px 20px;
       font-size: $type-size-5;
+      font-variant: small-caps;
 
       &:hover {
         color: $masthead-link-color-hover;
