--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -3,7 +3,7 @@
 <!-- start custom head snippets -->
 
 
-<link rel="shortcut icon" href="/assets/favicon.ico?">
+<link rel="shortcut icon" href="/assets/favicon2.ico?">
 <script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } }); </script>
 <script type="text/x-mathjax-config">
   MathJax.Hub.Config({
